# simplex-chat-api

./: Cargo.toml  README.md
examples/: repl.rs  squaring_bot.rs
src/: lib.rs
src/client/: builder.rs  mod.rs
src/command/: create_message.rs  mod.rs
src/stream/: connect.rs  mod.rs  request.rs  response.rs
src/types/: chat.rs  contact.rs  file.rs  group.rs  merged_preferences.rs  message.rs  mod.rs  note_folder.rs  preferences.rs  profile.rs  reaction.rs  terminal_event.rs  user.rs
src/types/errors/: chat.rs  mod.rs
